--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is first git</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="first">
+        <div class="second">
+            <div class="third">
+                <div class="random"> <h1> Random Joke Generator </h1></div>
+                <div class="random1">
+                    <p id="display-joke" >Click "Get a Joke" to see a funny joke!</p>
+                    <p>Character count: <span id="charCount">0</span></p>
+                </div>
+                <div class="btn">
+                    <button class="joke" id="joke">Get Joke</button>
+                    <button class="clear">Clear Joke</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
